28 August 2024: Wouter
	- Fix that when rpz is applied the message does not get picked up by
	  the validator. That stops validation failures for the message.

27 August 2024: Wouter
	- Fix #1130: Loads of logs: "validation failure: key for validation
	  <domain>. is marked as invalid because of a previous" for
	  non-DNSSEC signed zone.

23 August 2024: Wouter
	- Merge patch to fix for glue that is outside of zone, with
	  `harden-unverified-glue`, from Karthik Umashankar (Microsoft).
	  Enabling this option protects the Unbound resolver against bad
	  glue, that is unverified out of zone glue, by resolving them.
	  It uses the records as last resort if there is no other working
	  glue.
	- Fix #1127: error: "memory exhausted" when defining more than 9994
	  local-zones.
	- Fix documentation for cache_fill_missing function.

21 August 2024: Wouter
	- Add cross platform freebsd, openbsd and netbsd to github ci.
	- Fix for char signedness warnings on NetBSD.

20 August 2024: Wouter
	- Add iter-scrub-ns, iter-scrub-cname and max-global-quota
	  configuration options.

19 August 2024: Wouter
	- Fix #1126: unbound-control-setup hangs while testing for openssl
	  presence starting from version 1.21.0.

9 August 2024: Wouter
	- Fix spelling for the cache-min-negative-ttl entry in the
	  example.conf.
	- Tag for release 1.21.0, the repository continues with 1.21.1
	  in development.

8 August 2024: Wouter
	- Fix CAMP issues with global quota. Thanks to Huayi Duan, Marco
	  Bearzi, Jodok Vieli, and Cagin Tanir from NetSec group, ETH Zurich.
	- Fix CacheFlush issues with limit on NS RRs. Thanks to Yehuda Afek,
	  Anat Bremler-Barr, Shoham Danino and Yuval Shavitt (Tel-Aviv
	  University and Reichman University).
	- Set version number to 1.21.0 for release. This has tag 1.21.0rc1.
	- Fix that for windows the module startup is called and sets up
	  the module-config.

2 August 2024: Wouter
	- Fix that alloc stats has strdup checks, it stops debuggers from